# dotfiles

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.org  Main.hs  README.org  configuration.nix  dotfiles.cabal  flake.nix  options.nix
buildscript/: BuildScript.hs  update-dates
buildscript/state/: garbage-collect-dates  update-dates
docs/Emacs Mail Management mu4e/: README.org
docs/The Random Person Command/: README.org
resources/texts/: emacs-dashboard.txt
sys/: bluetooth.nix  bootloader.nix  default.nix  networking.nix  nix.nix  packages.nix  security.nix  sound.nix
users/claudio/: home.nix  packages.nix
users/claudio/xfce/: default.nix
users/joe/: btop.nix  dconf.nix  default.nix  emacs.nix  fish.nix  gpg.nix  gtk.nix  home.nix  mail.nix  options.nix  packages.nix  ssh.nix
users/joe/.emacs.d/: init.el
users/joe/autostart/: default.nix
users/joe/emacs/: bindings.nix  default.nix  init.el  joe-faces.nix  packages.nix
users/joe/emacs/faces/: default.nix  dev-faces.nix  mk-palette.nix  mk-set-face-attribute.nix  theme-color.nix
users/joe/emacs/faces/palettes/: dark.nix
users/joe/emacs/init-maker-emacs/: default.nix
users/joe/emacs/lisp/: auto-dark.el  catppuccin.el  dashboard.el  dirvish.el  eglot.el  emacs.el  eshell.el  flymake-stylelint.el  mu4e.el  nyxt.el  org.el  prelude.el  spacious-padding.el  vterm.el  which-key.el
users/joe/fish/: default.nix  fish_variables
users/joe/git/: default.nix  git-identity.bash
users/joe/gnome/: default.nix
users/joe/nyxt/: default.nix
users/joe/nyxt/lisp/: bookmarks.lisp  config.lisp  joe-nyxt-config.asd
users/joe/xfce/: default.nix
users/joe/zsh/: .p10k.zsh  default.nix
users/manon/: home.nix  packages.nix  xfce
users/manon/xfce/: default.nix
